<resources>
    <string name="app_name">ORMA</string>
    <string name="input_a_bottom"><font size="44">Ievadiet APAKŠĒJĀS daļas svaru</font></string>
    <string name="input_b_top"><font size="44">Ievadiet AUGŠĒJĀS daļas svaru</font></string>
    <string name="left">Pa kreisi</string>
    <string name="center">Pa vidu</string>
    <string name="right">Pa labi</string>
    <string name="with_glue">Ar līmi</string>
    <string name="no_value_entered">Nav ievadīta vērtība</string>
    <string name="bottom" translatable="false">Apakšā</string>
    <string name="top" translatable="false">Augšā</string>
    <string name="_0_0" translatable="false">0.0</string>
    <string name="g_m2">g/m2</string>
    <string name="glue_measurement">Glue measurement</string>
    <string name="calculate">Aprēķināt</string>
    <string name="no_glue">Nav līmēs</string>
    <string name="take_a_screenshot">uzņemiet ekrānuzņēmumu un nosūtiet</string>
    <string name="The_screenshot_has_been_saved">Ekrānuzņēmums ir saglabāts galerijā</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="poliform">Poliforms</string>
    <string name="PPL_HPL">PPL/HPL</string>
    <string name="skaida">Skaida</string>
    <string name="pf_M">pf>2.1</string>
    <string name="pārklājuma_veids">Pārklājuma veids:</string>
    <string name="izvēlieties_pašreizējo_pārklājuma_veidu">Izvēlieties pašreizējo\n  pārklājuma veidu:</string>
    <string name="button">Button</string>
    <string name="kopa">Kopā:</string>
    <string name="stundas">Stundas</string>
    <string name="oper">Oper</string>
    <string name="pal">Palīgs</string>
    <string name="_0">0</string>
    <string name="bt">Save\n</string>
    <string name="save">save</string>


</resources>